--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -18,9 +18,9 @@
 */
 
 body {
-  font-family: "PT Serif", Georgia, "Times New Roman", serif;
+  font-family: "Roboto";
   font-size: 18px;
-  color: #515151;
+  color: white;
   line-height: 1.75rem;
 }
 
@@ -42,8 +42,9 @@ h1 a {
   text-decoration: none;
 }
 
+@import url('https://fonts.googleapis.com/css?family=Playfair+Display&display=swap');
 h1, h2, h3, h4, h5, h6 {
-  font-family: "Quattrocento Sans", sans-serif;
+  font-family: "Playfair Display", sans-serif;
   color: #333;
 }
 
