--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -42,7 +42,7 @@ h1 a {
   text-decoration: none;
 }
 
-@import url('https://fonts.googleapis.com/css?family=Poiret+One');
+@import url('//fonts.googleapis.com/css?family=Poiret+One');
 h1, h2, h3, h4, h5, h6 {
   font-family: 'Poiret One', cursive;
   color: #333;
