--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -42,9 +42,8 @@ h1 a {
   text-decoration: none;
 }
 
-@import url('//fonts.googleapis.com/css?family=Poiret+One');
 h1, h2, h3, h4, h5, h6 {
-  font-family: 'Poiret One', cursive;
+  font-family: "Poiret One";
   color: #333;
 }
 
@@ -154,7 +153,7 @@ hr {
   margin-top:3px;
   margin-bottom: 1rem;
   color: #9a9a9a;
-  font-family: 'Quattrocento Sans', sans-serif;
+  font-family: "Poiret One", sans-serif;
   font-size:0.8rem;
 }
 
@@ -183,7 +182,7 @@ hr {
 
 .pagination {
   overflow: hidden;
-  font-family: 'Quattrocento Sans', sans-serif;
+  font-family: "Poiret One", sans-serif;
   text-align: center;
 }
 
