--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,9 @@
 <header class="masthead">
   <h3 class="masthead-title">
     <a href="{{ site.github.url }}/">{{ site.title }}</a>
-    <small class="masthead-subtitle">{{ site.description }}</small>
+    <br />
+    <a href="{{ site.github.url }}/">{{ site.title2 }}</a>
+    <!-- <small class="masthead-subtitle">{{ site.description }}</small> -->
     {% include menu.html %}
   </h3>
 </header>
