--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -19,7 +19,8 @@
 
 body {
   font-family: "Roboto";
-  font-size: 18px;
+  font-size: 14px;
+  font-weight: 100;
   color: black;
   line-height: 1.75rem;
 }
@@ -43,7 +44,8 @@ h1 a {
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: "Poiret One";
+  font-family: "Playfair Display";
+  font-weight: lighter;
   color: #333;
 }
 
@@ -101,7 +103,7 @@ hr {
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
   margin-bottom: 4rem;
-  font-family: 'Poiret One', cursive;
+  font-family: 'Playfair Display', cursive;
 }
 
 .masthead a:hover {
@@ -111,7 +113,7 @@ hr {
 .masthead-title a {
   font-size: 2rem;
   text-decoration: none;
-  color: #505050;
+  /*color: #505050;*/
 }
 
 .masthead-subtitle {
@@ -153,7 +155,7 @@ hr {
   margin-top:3px;
   margin-bottom: 1rem;
   color: #9a9a9a;
-  font-family: "Poiret One", sans-serif;
+  font-family: "Playfair Display", sans-serif;
   font-size:0.8rem;
 }
 
@@ -182,7 +184,7 @@ hr {
 
 .pagination {
   overflow: hidden;
-  font-family: "Poiret One", sans-serif;
+  font-family: "Playfair Display", sans-serif;
   text-align: center;
 }
 
@@ -241,6 +243,8 @@ hr {
 }
 
 .menu-content a {
+  font-family: "Roboto";
+  font-weight: 400;
   color: #999;
   font-size: 1rem;
   padding-right: 10px;
