--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -39,7 +39,7 @@ h1{
   font-size: 2rem;
 }
 
-h1 a {
+h1 a, h2 a {
   text-decoration: none;
 }
 
@@ -195,9 +195,9 @@ hr {
 .pagination-button {
   color: #999;
   border: 1px solid #e0e0e0;
-  padding: 15px 45px;
+  padding: 5px 20px;
   display: inline-block;
-  font-size: 16px;
+  font-size: 12px;
   font-weight: bold;
 }
 
